--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         Keep in mind that it is important that screen readers can read your code.  ARIA is one way to make it easier for the screen readers to understand how to process and load the page.
     </p>
 
+    <!--aria-label Defines a string value that labels the current element  -->
+    <button
+      aria-label="Back to the page"
+      title="Close" onclick="myDialog.close()">X</button>
+
     
 
 
